force-app/main/default/objects/License__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Application Returned</fullName>
            </value>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Application Completed</fullName>
            </value>
            <value>
                <fullName>Site Visit Performed</fullName>
            </value>
            <value>
                <fullName>Application Abandoned</fullName>
            </value>
            <value>
                <fullName>License Sanctioned - Allow Placement Referrals</fullName>
            </value>
            <value>
                <fullName>License Suspended</fullName>
            </value>
            <value>
                <fullName>License Revoked</fullName>
            </value>
            <value>
                <fullName>License Issued</fullName>
            </value>
            <value>
                <fullName>Request to Revoke License</fullName>
            </value>
            <value>
                <fullName>License Refused</fullName>
            </value>
            <value>
                <fullName>License Issued Under CAP</fullName>
            </value>
            <value>
                <fullName>Application Pending</fullName>
            </value>
            <value>
                <fullName>License Sanctioned - No New Placement Referrals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>