force-app/main/default/objects/License__c/fields/Administrative_File__c.field-meta.xml
<CustomField>
    <fullName>Administrative_File__c</fullName>
    <formula>IF( Incorporation_papers__c  &amp;&amp;  Governing_board__c &amp;&amp;  Organization_chart__c &amp;&amp;  Authorized_individuals__c &amp;&amp;  Agency_Purpose__c &amp;&amp;  Agreements_or_contracts__c &amp;&amp;  Insurance_coverage__c &amp;&amp;  Procedures_for_notification__c  ,&apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrative File</label>
    <type>Text</type>
</CustomField>