force-app/main/default/objects/License__c/fields/Agency_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Agency_Purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Purpose</label>
    <type>Checkbox</type>
</CustomField>