force-app/main/default/objects/License__c/fields/Agency_self_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Agency_self_evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency self-evaluation</label>
    <type>Checkbox</type>
</CustomField>