force-app/main/default/objects/License__c/fields/Agreements_or_contracts__c.field-meta.xml
<CustomField>
    <fullName>Agreements_or_contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreements or contracts</label>
    <type>Checkbox</type>
</CustomField>