force-app/main/default/objects/License__c/fields/Audit_or_Review__c.field-meta.xml
<CustomField>
    <fullName>Audit_or_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit or Review</label>
    <type>Checkbox</type>
</CustomField>