force-app/main/default/objects/License__c/fields/Authorized_individuals__c.field-meta.xml
<CustomField>
    <fullName>Authorized_individuals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized individuals</label>
    <type>Checkbox</type>
</CustomField>