force-app/main/default/objects/License__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <type>TextArea</type>
</CustomField>