force-app/main/default/objects/License__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State/Province</label>
    <type>TextArea</type>
</CustomField>