force-app/main/default/objects/License__c/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <type>TextArea</type>
</CustomField>