force-app/main/default/objects/License__c/fields/Community_Non_Paid_Services__c.field-meta.xml
<CustomField>
    <fullName>Community_Non_Paid_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community (Non Paid Services)</label>
    <type>Checkbox</type>
</CustomField>