force-app/main/default/objects/License__c/fields/Decision_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Entry_Date__c</fullName>
    <label>Decision Entry Date</label>
    <type>Date</type>
</CustomField>