force-app/main/default/objects/License__c/fields/Employee_medical_clearance__c.field-meta.xml
<CustomField>
    <fullName>Employee_medical_clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee medical clearance</label>
    <type>Checkbox</type>
</CustomField>