force-app/main/default/objects/License__c/fields/Existing_License__c.field-meta.xml
<CustomField>
    <fullName>Existing_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing License</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>License__c.Expiration_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>License Sites</relationshipLabel>
    <relationshipName>License_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>