force-app/main/default/objects/License__c/fields/Governing_board__c.field-meta.xml
<CustomField>
    <fullName>Governing_board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Governing board</label>
    <type>Checkbox</type>
</CustomField>