force-app/main/default/objects/License__c/fields/Incorporation_papers__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_papers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorporation papers</label>
    <type>Checkbox</type>
</CustomField>