force-app/main/default/objects/License__c/fields/Initial_Relicensure__c.field-meta.xml
<CustomField>
    <fullName>Initial_Relicensure__c</fullName>
    <label>Initial/Relicensure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Relicensure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>