force-app/main/default/objects/License__c/fields/Insurance_coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance coverage</label>
    <type>Checkbox</type>
</CustomField>