force-app/main/default/objects/License__c/fields/License_Decision__c.field-meta.xml
<CustomField>
    <fullName>License_Decision__c</fullName>
    <label>License Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>License Issued</fullName>
            </value>
            <value>
                <fullName>License Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>