force-app/main/default/objects/License__c/fields/License_Site__c.field-meta.xml
<CustomField>
    <fullName>License_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Site</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>CPA Office</value>
        </filterItems>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>RCC Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>License Sites (Provider Name)</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>