force-app/main/default/objects/License__c/fields/License_Site_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Site_Approval_Status__c</fullName>
    <label>License Site Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>