force-app/main/default/objects/License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPA: Adoption</fullName>
            </value>
            <value>
                <fullName>CPA: Independent Living</fullName>
            </value>
            <value>
                <fullName>CPA: TFC Medically Fragile</fullName>
            </value>
            <value>
                <fullName>CPA: Treatment Foster Care</fullName>
            </value>
            <value>
                <fullName>RCC: Small Group Home</fullName>
            </value>
            <value>
                <fullName>RCC Medically Fragile</fullName>
            </value>
            <value>
                <fullName>RCC Shelter Home</fullName>
            </value>
            <value>
                <fullName>RCC: Large Group Home</fullName>
            </value>
            <value>
                <fullName>RCC: Teen Mothers Program</fullName>
            </value>
            <value>
                <fullName>RCC: Respite</fullName>
            </value>
            <value>
                <fullName>Residential Treatment Center</fullName>
            </value>
            <value>
                <fullName>Alternative Living Unit</fullName>
            </value>
            <value>
                <fullName>Therapeutic Group Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>