force-app/main/default/objects/License__c/fields/Licensed_Beds__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Beds__c</fullName>
    <label>Licensed Beds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>