force-app/main/default/objects/License__c/fields/Licensing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Agency__c</fullName>
    <label>Licensing Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DHR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>