force-app/main/default/objects/License__c/fields/Licensing_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Coordinator__c</fullName>
    <label>Licensing Coordinator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>