force-app/main/default/objects/License__c/fields/MD_Chessie_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>MD_Chessie_Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>