force-app/main/default/objects/License__c/fields/Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Modification_Date__c</fullName>
    <label>Modification Date</label>
    <type>Date</type>
</CustomField>