force-app/main/default/objects/License__c/fields/Operational_Budget__c.field-meta.xml
<CustomField>
    <fullName>Operational_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational Budget</label>
    <type>Checkbox</type>
</CustomField>