force-app/main/default/objects/License__c/fields/Organization_chart__c.field-meta.xml
<CustomField>
    <fullName>Organization_chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organization chart</label>
    <type>Checkbox</type>
</CustomField>