force-app/main/default/objects/License__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement</label>
    <type>Checkbox</type>
</CustomField>