force-app/main/default/objects/License__c/fields/Previous_License__c.field-meta.xml
<CustomField>
    <fullName>Previous_License__c</fullName>
    <label>Previous License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>