force-app/main/default/objects/License__c/fields/Procedures_for_notification__c.field-meta.xml
<CustomField>
    <fullName>Procedures_for_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedures for notification</label>
    <type>Checkbox</type>
</CustomField>