force-app/main/default/objects/License__c/fields/Prov_Lic_Checklist_Mid_Term_Review__c.field-meta.xml
<CustomField>
    <fullName>Prov_Lic_Checklist_Mid_Term_Review__c</fullName>
    <formula>IF( Agency_self_evaluation__c &amp;&amp;  Audit_or_Review__c &amp;&amp;  Employee_medical_clearance__c &amp;&amp;  Governing_board__c &amp;&amp;  Operational_Budget__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prov Lic Checklist Mid-Term Review</label>
    <type>Text</type>
</CustomField>