force-app/main/default/objects/License__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>License Sites (Provider Name)</relationshipLabel>
    <relationshipName>License_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>