force-app/main/default/objects/License__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Living Unit</fullName>
            </value>
            <value>
                <fullName>RCC: Large Group Home</fullName>
            </value>
            <value>
                <fullName>RCC : Medically Fragile</fullName>
            </value>
            <value>
                <fullName>RCC  : Respite</fullName>
            </value>
            <value>
                <fullName>RCC : Shelter Home</fullName>
            </value>
            <value>
                <fullName>RCC : Small Group Home</fullName>
            </value>
            <value>
                <fullName>RCC : Teen Mother Program</fullName>
            </value>
            <value>
                <fullName>Residential Treatment Center</fullName>
            </value>
            <value>
                <fullName>Therapeutic Group Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>