force-app/main/default/objects/License__c/recordTypes/License.recordType-meta.xml
<RecordType>
    <fullName>License</fullName>
    <active>true</active>
    <label>License</label>
</RecordType>