force-app/main/default/objects/License__c/recordTypes/License_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>License_Read_Only</fullName>
    <active>true</active>
    <label>License Read Only</label>
</RecordType>