force-app/main/default/objects/License__c/validationRules/Do_not_allow_change_after_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_change_after_approved</fullName>
    <active>true</active>
    <description>Do not changes allow after this record is approved</description>
    <errorConditionFormula>PRIORVALUE(LastModifiedDate)  &lt;&gt;  LastModifiedDate</errorConditionFormula>
    <errorMessage>License Site is Approved so, We cannot change the referral</errorMessage>
</ValidationRule>